Intro animation overflow fix + test deploy cmds

--- a/src/AppBundle/Resources/private/pages/index.scss
+++ b/src/AppBundle/Resources/private/pages/index.scss
@@ -548,6 +548,12 @@ button:active:hover .link-text-size,
   }
 }
 
+@include media-breakpoint-up(md) {
+  .site-wrapper {
+    overflow: hidden;
+  }
+}
+
 @include media-breakpoint-down(sm) {
   .main-home-row {
     height: auto;
